# You must change these to your own details.
[package]
name = "check_sig"
description = "Application to verify PAdES signed PDFs"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]


[dependencies]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
# wee_alloc = { version = "0.4.2", optional = true }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
anyhow = "1.0.40"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"

serde-wasm-bindgen = "0.1.3"
js-sys = "0.3.50"
hex = "0.4.3"
itertools = "0.10.0"
der-parser = "5.1.0"
oid-registry = "0.1.1"
untrusted = "0.7.1"

[dependencies.chrono]
version = "0.4.19"
features = ["wasmbind"]

[dependencies.x509-parser]
version = "0.9.2"
features = ["verify"]

[dependencies.reqwest]
version = "0.11.2"
features = ["blocking"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.p256]
version = "0.7.2"
features = ["ecdsa",
    "ecdsa-core",
    "digest",
    "sha256",
    "std"
]

[dependencies.ring]
version = "0.16.20"
features = ["wasm32_c", "std"]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.50"
features = ["console",
    'Document',
    'Element',
    'HtmlElement',
    'EventListener',
    'EventTarget',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'ResponseInit',
    'ResponseType',
    'Window',
    'Location',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
lto=false

[build-dependencies]
cc = "1.0.67"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true